--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,16 @@ body, html * {
   max-width: 1000px;
   margin: 0 auto;
 }
+.back{
+  background-color: #4B4B4B;
+}
 a.logo img{
   width: 180px;
   margin-top: 15px;
 }
 nav{
   width: 100%;
-  height: 70px;
+  height: 50px;
   position: relative;
   z-index: 1000;
   background-color: white;
@@ -50,8 +53,8 @@ nav ul li a:hover{
 }
 .page h1{
   padding: 0.5em;
-  color: #fff;
   text-shadow: 0 2px 7px rgba(0,0,0,.55);
+  color: rgba(255, 255, 255, .95);
 }
 .page .inner{
   min-width: 70vh;
@@ -62,7 +65,7 @@ nav ul li a:hover{
 .fixed-top{
   position: fixed;
   top : 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
 }
 .first-part{
@@ -90,9 +93,9 @@ nav ul li a:hover{
   }
 }
 footer{
-  padding: .75em;
+  padding: .4em;
   background-color: white;
-  color: balck;
+  color: black;
   font-size: 0.75rem;
   text-align: center;
 }
@@ -101,22 +104,39 @@ footer{
   bottom: 0;
   overflow: hidden;
   width: 100%;
+  height: 28px;
 }
-.slider .indicators .indicator-item {
-  background-color: #666666;
-  border: 3px solid #ffffff;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+.dropdown-button{
+  background-color: white;
+  padding: none;
+  font-size: 15px;
+  border: none;
+  text-decoration: none;
+  color: black;
+  transition: all 0.25s;
 }
-.slider .indicators .indicator-item.active {
-  background-color: #ffffff;
+.dropdown-button:hover{
+  color: orange;
+  padding-bottom: 3px;
+  border-bottom: 1px solid orange;
 }
-.slider {
-  width: 900px;
-  margin: 0 auto;
+.dropdown{
+  position: relative;
 }
-.slider .indicators {
-  bottom: 60px;
-  z-index: 100;
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 75px;
+  padding: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,2);
 }
+.dropdown-content a{
+  color: white;
+  padding: 8px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover{background-color: orange;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-button {background-color: white;}
