--- a/css/intro.css
+++ b/css/intro.css
@@ -10,16 +10,19 @@ body, html * {
   max-width: 1000px;
   margin: 0 auto;
 }
+.back{
+  background-color: #4B4B4B;
+}
 a.logo img{
   width: 180px;
   margin-top: 15px;
 }
 nav{
   width: 100%;
-  height: 70px;
+  height: 50px;
   position: relative;
   z-index: 1000;
-  background-color: black;
+  background-color: white;
 }
 nav ul{
   list-style: none;
@@ -33,7 +36,7 @@ nav ul li{
 }
 nav ul li a{
   text-decoration: none;
-  color: white;
+  color: black;
   transition: all 0.25s;
 }
 nav ul li a:hover{
@@ -45,23 +48,13 @@ nav ul li a:hover{
   display: flex;
   justify-content: space-between;
 }
-.full-page{
-  height: 100vh;
-}
-.back-image1{
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  background-position: center;
-  background-image: url("../imgs/image-back2.jpg");
-}
 .page{
   padding-top: 70px;
 }
 .page h1{
   padding: 0.5em;
-  color: #fff;
   text-shadow: 0 2px 7px rgba(0,0,0,.55);
+  color: rgba(255, 255, 255, .95);
 }
 .page .inner{
   min-width: 70vh;
@@ -72,15 +65,25 @@ nav ul li a:hover{
 .fixed-top{
   position: fixed;
   top : 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
 }
 .first-part{
   min-height: 500px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-@@keyframes fadetop {
+.first-part h1{
+  text-align: center;
+  font-size: 5em;
+  transition: width 0.5s liner 0.2s;
+  position: relative;
+  animation: fadetop 3s;
+  display: none;
+}
+@keyframes fadetop {
   0%{
     opacity: 0;
     top: -150px;
@@ -91,15 +94,70 @@ nav ul li a:hover{
   }
 }
 footer{
-  padding: .75em;
-  background-color: black;
-  color: white;
+  padding: .4em;
+  background-color: white;
+  color: black;
   font-size: 0.75rem;
   text-align: center;
+}
+h2{
+  color : #4B4B4B;
+  border-bottom:5px solid orange;
+}
+a{
+  color : white;
+}
+table {
+  border: 2px solid none;
+}
+td {
+  background-color: orange; text-align: center;
+}
+th {
+  background-color: #4B4B4B; text-align: center;
+  color: white;
+}
+.pass h1{
+  display: inline;
 }
 .fixed-bottom{
   position: fixed;
   bottom: 0;
   overflow: hidden;
   width: 100%;
+  height: 28px;
 }
+.dropdown-button{
+  background-color: white;
+  padding: none;
+  font-size: 15px;
+  border: none;
+  text-decoration: none;
+  color: black;
+  transition: all 0.25s;
+}
+.dropdown-button:hover{
+  color: orange;
+  padding-bottom: 3px;
+  border-bottom: 1px solid orange;
+}
+.dropdown{
+  position: relative;
+}
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 75px;
+  padding: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,2);
+}
+.dropdown-content a{
+  color: white;
+  padding: 8px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover{background-color: orange;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-button {background-color: white;}
